--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                    <a href="tel:+148126287560">+48 12 628 75 60</a>
+                    <p>Unter den Linden, 31-154 Berlin, Germany</p>
+                    <a href="mailto:ouremail@gmail.com">info@example.com</a>
+                    <a href="tel:+148126287560">+49 12 34 56 78 9</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
+                    <li><a href="#0">Github</a></li>
                     <li><a href="#0">dribbble</a></li>
                     <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
                   </ul>
